--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+  Sensive Blog - Home
+{% endblock %}
+
 <!--================Header Menu Area =================-->
 {% block content %}
   <header class="header_area">
