--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -63,7 +63,7 @@
         <div class="col-lg-8">
           <div class="main_blog_details">
             {% if post.image_url %}
-              <img class="img-fluid" src={{post.image_url}} alt="">
+              <img class="img-fluid" src={{post.image_url}} alt="{{ post.title }}">
             {% else %}
               <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
             {% endif %}
