--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src={{post.image_url}} alt="">
+                  <img class="card-img rounded-0" src={{post.image_url}} alt="{{post.title}}">
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="{% url 'post_detail' slug=post.slug %}">{{post.title}}</a></h3>
@@ -83,7 +83,7 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if post.image_url %}
-                    <img class="img-fluid" src={{post.image_url}} alt="">
+                    <img class="img-fluid" src={{post.image_url}} alt="{{post.title}}">
                   {% else %}
                     <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
